# tttc_practice

implicit_cast_counter/: README.md
implicit_cast_counter/counter_tests/: test1.cpp  test2.cpp
implicit_cast_counter/implicit_plugin/: CMakeLists.txt  ImplicitCastCounter.cpp
pass_3_var/: README.md
pass_3_var/src/: CMakeLists.txt  MyLoopPass.cpp
pass_3_var/test/: test_1.cpp  test_1.ll
